# doma.sim

./: .gitignore  Cargo.toml  config.yaml  plot.py  readme.md  testmap.json
src/: agent.rs  city.rs  config.rs  design.rs  grid.rs  main.rs  play.rs  policy.rs  sim.rs  social.rs  stats.rs  sync.rs
