[package]
name = "doma_sim"
version = "0.1.0"
authors = ["Francis Tseng <f+accounts@frnsys.com>"]
edition = "2018"

[dependencies]
rand = "0.6"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
strum = "0.15.0"
strum_macros = "0.15.0"
noise = "0.5.1"
linreg = "0.1.3"
redis = "0.10.0"
md-5 = "0.8.0"
pbr = "1.0.1"
